--- a/blog-hs.cabal
+++ b/blog-hs.cabal
@@ -44,8 +44,12 @@ executable blog-hs-gen
   import: common-settings
   hs-source-dirs: app
   main-is: Main.hs
+  other-modules:
+    OptParse
   build-depends:
       base
+    , directory
+    , optparse-applicative
     , blog-hs
   ghc-options:
     -O
