--- a/blog-hs.cabal
+++ b/blog-hs.cabal
@@ -18,7 +18,7 @@ license-file:        LICENSE.txt
 author:              Nurdaulet Taumergenov
 maintainer:          taumergenov@duck.com
 category:            Learning, Web
-extra-doc-files:
+extra-doc-files:;
   README.md
 
 common common-settings
@@ -31,13 +31,17 @@ library
   hs-source-dirs: src
   build-depends:
       base
-    , directory
+      , directory
+      , filepath
+      , mtl
   exposed-modules:
     BlogHs
       BlogHs.Convert
       BlogHs.Html
         BlogHs.Html.Internal
       BlogHs.Markup
+			BlogHs.Directory
+			BlogHs.Env
   -- other-modules:
 
 executable blog-hs-gen
@@ -53,3 +57,22 @@ executable blog-hs-gen
     , blog-hs
   ghc-options:
     -O
+
+test-suite blog-hs-gen-test
+  import: common-settings
+	type: exitcode-stdio-1.0
+	hs-source-dirs: test
+	main-is: Spec.hs
+
+	-- other-modules
+	build-depends:
+	    base
+		, hspec
+		, hspec-discover
+		, raw-strings-qq
+		, blog-hs
+	ghc-options:
+	  -O -threaded -rtsopts -with-rtsopts=-N
+	build-tool-depends:
+	  hspec-discover:hspec-discover
+	
