--- a/blog-hs.cabal
+++ b/blog-hs.cabal
@@ -40,8 +40,8 @@ library
       BlogHs.Html
         BlogHs.Html.Internal
       BlogHs.Markup
-			BlogHs.Directory
-			BlogHs.Env
+      BlogHs.Directory
+      BlogHs.Env
   -- other-modules:
 
 executable blog-hs-gen
@@ -60,19 +60,20 @@ executable blog-hs-gen
 
 test-suite blog-hs-gen-test
   import: common-settings
-	type: exitcode-stdio-1.0
-	hs-source-dirs: test
-	main-is: Spec.hs
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Spec.hs
 
-	-- other-modules
-	build-depends:
-	    base
-		, hspec
-		, hspec-discover
-		, raw-strings-qq
-		, blog-hs
-	ghc-options:
-	  -O -threaded -rtsopts -with-rtsopts=-N
-	build-tool-depends:
-	  hspec-discover:hspec-discover
-	
+  other-modules:
+    MarkupParsingSpec
+  build-depends:
+      base
+    , hspec
+    , hspec-discover
+    , raw-strings-qq
+    , blog-hs
+  ghc-options:
+    -O -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+    hspec-discover:hspec-discover
+  
